fix broken layout in BE "add attendee" #1679

--- a/media/css/backend.css
+++ b/media/css/backend.css
@@ -1328,7 +1328,6 @@ input#places::-webkit-inner-spin-button {
 /*--- attendee view ---*/
 .view-attendee .key {
     padding-right:20px;
-    min-width:100%;
 }
 
 #reg_status {
